--- a/src/css/style.css
+++ b/src/css/style.css
@@ -115,3 +115,52 @@ a:visited {
 .square__task10 div:nth-child(2) {
   z-index: 2;
 }
+
+.background-block {
+  width: 200px;
+  height: 120px;
+  background-color: lightgreen;
+  position: relative;
+}
+
+.sq {
+  width: 40px;
+  height: 40px;
+  background-color: #fff;
+  position: absolute;
+}
+
+.sq:first-child {
+  top: 10px;
+  left: 10px;
+}
+.sq:last-child {
+  bottom: 10px;
+  right: 10px;
+}
+
+.body {
+  width: 100%;
+  height: 100vh;
+  border: 2px solid blue;
+  background-color: #fff;
+}
+
+aside {
+  width: 20%;
+  height: 100%;
+  background-color: green;
+}
+
+.body__block {
+  width: 70%;
+}
+
+.banner {
+  width: 600px;
+  height: 200px;
+  background-color: lightpink;
+  position: fixed;
+  top: 100px;
+  left: 100px;
+}
