--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,47 +1,26 @@
 body {
-  font-size: 18px;
+  margin: 0;
 }
+
 .container {
   margin: 20px auto;
-  padding: 20px;
-  max-width: 500px;
+  width: 800px;
 }
 
-p span:first-child {
-  color: red;
-}
-
-p span:last-child {
-  color: green;
-}
-
-p:nth-child(odd) {
-  color: red;
-}
-
-ul li:first-child {
-  color: red;
-}
-ul li:last-child {
-  color: green;
-}
-
-.task3 li:nth-child(even) {
-  color: red;
-}
-.task3 li:nth-child(odd) {
-  color: green;
-}
-
-div:not(.text) {
-  color: red;
-}
-
-a {
+input,
+textarea {
   display: block;
-  font-size: inherit;
+  margin-bottom: 30px;
+  font-size: 20px;
+  background-color: #eee;
 }
 
-a:visited {
-  color: green;
+button {
+  background-color: #eee;
+}
+
+.radioblock {
+  width: 100%;
+  border: 2px solid #ccc;
+  padding: 10px;
 }
