--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,44 +4,54 @@ body {
 .container {
   margin: 20px auto;
   padding: 20px;
-  max-width: 500px;
+  max-width: 1400px;
+  height: 100vh;
 }
 
-p span:first-child {
-  color: red;
+.header {
+  margin-bottom: 10px;
+  width: 100%;
+  height: 200px;
+  background-color: rgb(245, 179, 56);
 }
 
-p span:last-child {
-  color: green;
+.wrapper {
+  width: 100%;
+  display: flex;
+
+  justify-content: space-between;
+  gap: 10px;
 }
 
-p:nth-child(odd) {
-  color: red;
+.wrapper__item {
+  width: 33.333%;
 }
 
-ul li:first-child {
-  color: red;
-}
-ul li:last-child {
-  color: green;
-}
-
-.task3 li:nth-child(even) {
-  color: red;
-}
-.task3 li:nth-child(odd) {
-  color: green;
+.wrapper__item-title {
+  margin-bottom: 10px;
+  height: 120px;
+  background-color: rgb(182, 137, 53);
 }
 
-div:not(.text) {
-  color: red;
+.wrapper__el {
+  margin-bottom: 10px;
+  height: 20px;
+  background-color: rgb(182, 137, 53);
 }
 
-a {
-  display: block;
-  font-size: inherit;
+@media only screen and (max-width: 768px) {
+  .wrapper__item {
+    width: 50%;
+  }
+  .wrapper__item:last-child {
+    display: none;
+  }
 }
-
-a:visited {
-  color: green;
+@media only screen and (max-width: 390px) {
+  .wrapper__item {
+    width: 100%;
+  }
+  .wrapper__item:first-child {
+    display: none;
+  }
 }
