--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,3 +16,90 @@ h5 {
   margin: 0;
   box-sizing: border-box;
 }
+
+.container {
+  margin: 100px auto;
+  padding: 0 100px;
+}
+
+.balls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ball-container {
+  display: flex;
+  align-items: flex-end;
+
+  height: 300px;
+  transform-origin: top center;
+}
+
+.ball-container:first-child {
+  animation: left 1.5s normal;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+.ball-container:last-child {
+  animation: right 1.5s normal;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+.ball {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+.ball_1 {
+  background: linear-gradient(90deg, #9198e5, #9198e5);
+}
+.ball_2 {
+  background: linear-gradient(90deg, #9198e5, #5a2f6b);
+}
+.ball_3 {
+  background: linear-gradient(90deg, #5a2f6b, #6b2f54);
+}
+.ball_4 {
+  background: linear-gradient(90deg, #6b2f54, #a75a89);
+}
+.ball_5 {
+  background: linear-gradient(90deg, #a75a89, #883568);
+}
+.ball_6 {
+  background: linear-gradient(90deg, #a75a89, #be408e);
+}
+.ball_7 {
+  background: linear-gradient(90deg, #be408e, #702c2c);
+}
+.ball_8 {
+  background: linear-gradient(90deg, #702c2c, #831919);
+}
+
+@keyframes left {
+  0% {
+    transform: none;
+  }
+  25% {
+    transform: rotate(90deg);
+  }
+  50% {
+    transform: none;
+  }
+}
+
+@keyframes right {
+  50% {
+    transform: none;
+  }
+  75% {
+    transform: rotate(-90deg);
+  }
+
+  100% {
+    transform: none;
+  }
+}
